# GamesAndContext

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: reproduce.yml
docs/: reviewer_audit.md
manuscript/: context_dependent_benefit_loss_games_v09.tex  feature_appendix.tex  finite_game_results.tex
notebooks/: reproduce_context_dependent_benefit_loss_games_v09.ipynb
results/: axis_margins.csv  class_table.csv  context_path_events.csv  contextual_classifier_audit.csv  convergence_diagnostics.csv  dynamic_trajectory_distances.csv  exhaustive_dichotomy_audit.csv  final_values.csv  payoff_perturbation_audit.csv  payoff_table.csv  pure_nash.csv  rectangular_configuration_audit.csv  robustness_radii.csv  sensitivity_grid_detail.csv  sensitivity_grid_summary.csv  structural_sensitivity.csv
scripts/: build_notebook.py  run_all.py
src/context_games/: __init__.py  benchmarks.py  contextual_classifier.py  experiments.py  model.py  reproduce.py
submission/: author-declarations-template.txt  data-availability-statement.txt  highlights.txt  pre-submission-checklist.md  submission-manifest.md  title-page-information.txt
tests/: test_contextual_classifier.py  test_model.py  test_theorems.py
