[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "context-dependent-benefit-loss-games"
version = "0.9.0"
description = "Reproducible models and experiments for context-dependent benefit-loss games"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10,<3.11",
  "numpy>=2.3,<2.5",
  "pandas>=2.3,<2.4",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=7.0,<8",
  "nbclient>=0.11,<0.12",
  "nbformat>=5.10,<6",
]

[project.scripts]
context-games-reproduce = "context_games.reproduce:main"

[tool.setuptools.packages.find]
where = ["src"]
